# deezer_visualisation

./: .gitignore  .pre-commit-config.yaml  Graph Notebook.ipynb  LICENSE  README.md  api_manager.py  config.json  data_processing.py  main.py  pyproject.toml
.github/workflows/: job_run.yml
musedashboard/: api_manager.py  csv_history.py  data_processing.py  history_interface.py  job_flow_interface.py  main.py  mongo_db_history.py  mongo_job_flow.py  prefect_job.py  streamlit_dashboard.py
musedashboard/dashboard/: app.py  csv_history.py  history_interface.py  mongo_db_history.py  streamlit_dashboard.py
musedashboard/data_eng/: api_manager.py  data_processing.py
