[tool.poetry]
name = "deezer_visualisation"
version = "0.1.0"
description = ""
authors = ["Isma Lachheb <ismael.lachheb@protonmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.1"
requests = "^2.24.0"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
pandas = "^1.1.2"
flake8 = "^3.8.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
