[tool.poetry]
name = "musedashboard"
version = "0.1.0"
description = ""
authors = ["Isma Lachheb <ismael.lachheb@protonmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
typer = "^0.3.2"
numpy = "^1.20.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.2.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
