[tool.poetry]
name = "musedashboard"
version = "1.0.0"
description = ""
authors = ["Isma Lachheb <ismael.lachheb@protonmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
typer = "^0.3.2"
numpy = "^1.20.1"
requests = "^2.25.1"
plotly = "^4.14.3"
altair = "^4.1.0"
ipykernel = "^5.5.3"
seaborn = "^0.11.1"
streamlit = "^1.2.0"
pymongo = "^4.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.2.2"
flake8 = "^3.8.4"
nbconvert = "^6.0.7"
vega-datasets = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
